--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,8 @@
 		"unicorn/no-null": "off",
 		"unicorn/prefer-module": "off",
 		"unicorn/prefer-node-protocol": "off",
-		"unicorn/filename-case": "off"
+		"unicorn/filename-case": "off",
+		"unicorn/prevent-abbreviations": "off"
 	},
 	"overrides": [
 		{
