--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.0-rc.9",
+    "vite-plugin-md": "^0.11.1",
     "vue": "^3.2.13",
     "vue-demi": "^0.11.4",
     "vue-router": "^4.0.11"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@amatlash/vite-plugin-stylelint": "^1.1.1",
     "@iconify/json": "^1.1.404",
+    "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
@@ -46,6 +48,8 @@
     "eslint-plugin-yml": "^0.10.1",
     "https-localhost": "^4.7.0",
     "jsonc-eslint-parser": "^1.3.1",
+    "markdown-it-link-attributes": "^3.0.0",
+    "markdown-it-prism": "^2.2.1",
     "pnpm": "^6.15.1",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
