--- a/package.json
+++ b/package.json
@@ -8,49 +8,49 @@
   },
   "dependencies": {
     "@qvant/qui-max": "^0.4.0",
-    "@vueuse/core": "^6.5.3",
+    "@vueuse/core": "^6.7.6",
     "@vueuse/head": "^0.6.0",
-    "@vueuse/integrations": "^6.5.3",
+    "@vueuse/integrations": "^6.7.6",
     "axios": "^0.21.4",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.0-rc.12",
-    "vite-plugin-md": "^0.11.1",
-    "vue": "^3.2.20",
+    "pinia": "^2.0.2",
+    "vite-plugin-md": "^0.11.4",
+    "vue": "^3.2.21",
     "vue-demi": "^0.11.4",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@amatlash/vite-plugin-stylelint": "^1.1.1",
-    "@iconify/json": "^1.1.413",
+    "@iconify/json": "^1.1.424",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/compiler-sfc": "^3.2.20",
-    "@vue/server-renderer": "^3.2.20",
+    "@vitejs/plugin-vue": "^1.9.4",
+    "@vue/compiler-sfc": "^3.2.21",
+    "@vue/server-renderer": "^3.2.21",
     "critters": "^0.0.10",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.1",
+    "eslint-config-airbnb-typescript": "^14.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^6.2.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsonc": "^1.7.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-promise": "^5.1.1",
     "eslint-plugin-unicorn": "^35.0.0",
-    "eslint-plugin-vue": "^7.19.1",
+    "eslint-plugin-vue": "^7.20.0",
     "eslint-plugin-yml": "^0.10.1",
     "https-localhost": "^4.7.0",
     "jsonc-eslint-parser": "^1.4.1",
     "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-prism": "^2.2.1",
-    "pnpm": "^6.17.0",
+    "pnpm": "^6.20.3",
     "prettier": "^2.4.1",
     "stylelint": "^13.13.1",
     "stylelint-color-format": "^1.1.0",
@@ -60,13 +60,13 @@
     "stylelint-order": "^4.1.0",
     "stylelint-prettier": "^1.2.0",
     "stylelint-semantic-groups": "^1.1.1",
-    "typescript": "^4.4.3",
+    "typescript": "^4.4.4",
     "unplugin-auto-import": "^0.2.7",
     "unplugin-icons": "^0.7.6",
     "unplugin-vue-components": "^0.14.13",
-    "vite": "^2.6.7",
+    "vite": "^2.6.13",
     "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-pages": "^0.18.1",
+    "vite-plugin-pages": "^0.18.2",
     "vite-plugin-pwa": "^0.11.3",
     "vite-plugin-vue-layouts": "^0.3.1",
     "vite-ssg": "^0.14.7",
